подчистили немного, и начали месседжер, и под гостем логин сделали

--- a/drive_forms/index.html
+++ b/drive_forms/index.html
@@ -13,7 +13,6 @@
   <script src="/app/client.js"></script>
   <script src="/app/UI_classes.js"></script>
   <script src="/app/UI.js"></script>
-  <script src="/app/apps/tetris"></script>
-  <script src="/app/apps/login"></script>
+  <script src="/app/loadApps"></script>
 </body>
 </html>
